.legacy-gitops-apps/playbox/core/apps/cilium-resources/cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-to-argocd-server
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
